Refactor REST routing.  Add method to get all timelines for tag
